[package]
name = "liblrs"
version = "0.2.3"
edition = "2021"
description = "Library to manipulate linear referencing systems"
license = "MIT"
homepage = "https://github.com/OpenRailAssociation/liblrs/"

[workspace]
members = ["wasm", "python"]

[lib]
name = "liblrs"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "geometry_from_osm"
path = "src/geometry_from_osm.rs"

[dependencies]
approx = "0.5.1"
flatbuffers = "24.3"
geo = "0.28"
thiserror = "1.0"
osm4routing = "0.7.0"
clap = { version = "4.5.1", features = ["derive"] }
num-traits = "0.2"
