[package]
name = "liblrs_python"
version = "0.1.2"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
liblrs = { path = ".." }
geo-types = "*"
pyo3-stub-gen = {path="/home/tristram/travail/sncf/pyo3-stub-gen/pyo3-stub-gen"}
pyo3-stub-gen-derive = "0.6"
pyo3 = { version = "0.21", features = ["extension-module"]}