[package]
name = "liblrs_python"
description = "Python bindings for liblrs: a library to work with linear referencing systems"
version = "0.1.6"
edition = "2021"
license = "MIT"
repository = "https://github.com/osrd-project/liblrs/"

[lib]
crate-type = ["cdylib"]

[dependencies]
liblrs = { path = ".." }
geo-types = "*"
# "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8
pyo3 = { version = "0.22.1", features = ["abi3-py38"]}
